# equity-research

./: .gitignore  CLAUDE.md
flow-tracker/: .gitignore  CLAUDE.md  README.md  ROADMAP.md  flowtrack  pyproject.toml
flow-tracker/docs/: agent-skills-playbook.md  data-source-comparison.md  db-architecture.md  screener-api-map.md
flow-tracker/flowtracker/: __main__.py  adr_client.py  adr_commands.py  adr_display.py  adr_models.py  alert_commands.py  alert_display.py  alert_engine.py  alert_models.py  bhavcopy_client.py  bhavcopy_commands.py  bhavcopy_display.py  bhavcopy_models.py  catalyst_client.py  catalyst_commands.py  catalyst_display.py  catalyst_models.py  client.py  commodity_client.py  commodity_commands.py  commodity_display.py  commodity_models.py  data_quality.py  deals_client.py  deals_commands.py  deals_display.py  deals_models.py  display.py  estimates_client.py  estimates_commands.py  estimates_display.py  estimates_models.py  fda_client.py  fda_commands.py  fda_display.py  fda_models.py  filing_client.py  filing_commands.py  filing_models.py  fmp_client.py  (+54 more)
flow-tracker/flowtracker/data/: __init__.py  adr_programs_seed.json  irdai_net_premium.json
flow-tracker/flowtracker/research/: __init__.py  agent.py  analog_builder.py  annual_report_extractor.py  ar_downloader.py  assembly.py  briefing.py  charts.py  concall_extractor.py  data_api.py  data_collector.py  deck_extractor.py  doc_extractor.py  five_year_parser.py  fundamentals.py  heading_toc.py  macro_anchors.py  models.py  peer_refresh.py  press_release_extractor.py  projections.py  prompts.py  refresh.py  sector_kpis.py  snapshot_builder.py  thesis_tracker.py  tools.py  verifier.py  wacc.py  workflow_verifier.py
flow-tracker/flowtracker/templates/: fundamentals.html.j2
flow-tracker/reports/: indiamart-analysis.html  indiamart-fundamentals.html  indiamart-thesis-v4.html
flow-tracker/scripts/: alert-check.sh  backfill-index-prices.py  backfill-nifty250.py  backfill_adj_close.py  backfill_data_quality_flags.py  backfill_fii_dii.py  backfill_fundamentals.py  backfill_quarterly_nse.py  backfill_sector_kpis.py  batch-download-filings.py  check-freshness.py  compute-analytics.py  daily-fetch.sh  daily-fno.sh  detect_discontinuity.py  install-launch-agents.sh  materialize_analog_states.py  migrate-pct.py  migrate-units.py  monthly-macro-eval.sh  monthly-mf.sh  monthly-mfportfolio.sh  nightly-adj-close.sh  quarterly-filings.sh  quarterly-fno-universe.sh  quarterly-results.sh  quarterly-scan.sh  reconcile_price_cliffs.py  rescan_concall_pdfs.py  setup-crons.sh  smoke_part_1_5.py  weekly-nifty250.sh  weekly-valuation.sh
flow-tracker/scripts/plists/: README.md  com.flowtracker.daily-fno.plist  com.flowtracker.daily-fno.plist.tmpl  com.flowtracker.monthly-macro-eval.plist.tmpl  com.flowtracker.nightly-adj-close.plist  com.flowtracker.nightly-adj-close.plist.tmpl  com.flowtracker.quarterly-fno-universe.plist  com.flowtracker.quarterly-fno-universe.plist.tmpl
flow-tracker/tests/: conftest.py
flow-tracker/tests/contract/: test_agent_tool_registries.py  test_cli_help_snapshot.py  test_model_snapshot.py  test_schema_snapshot.py
flow-tracker/tests/e2e/: test_alert_pipeline.py  test_screener_pipeline.py
flow-tracker/tests/fixtures/: factories.py
flow-tracker/tests/integration/: test_analog_zero_leakage.py  test_ar_tool_degradation.py  test_client_store.py  test_command_wiring.py  test_commands_extended.py  test_display_modules.py  test_eval_agent_registry.py  test_macro_integration.py  test_mcp_tools_extended.py
flow-tracker/tests/quality/: test_data_consistency.py
flow-tracker/tests/unit/: test_adj_close.py  test_adr_client.py  test_agent.py  test_alert_engine.py  test_analog_backtest.py  test_analog_builder.py  test_analog_survivorship.py  test_analytics_cd.py  test_annual_report.py  test_ar_downloader.py  test_assembly.py  test_assembly_pipeline.py  test_autoeval_evaluate.py  test_autoeval_evidence_format.py  test_autoeval_macro.py  test_autoeval_progress.py  test_backtest_historical_analog.py  test_briefing_extended.py  test_catalyst_ma.py  test_charts.py  test_client_commodity.py  test_client_deals.py  test_client_error_paths.py  test_client_estimates.py  test_client_filing.py  test_client_fund.py  test_client_holding.py  test_client_insider.py  test_client_irdai.py  test_client_macro.py  test_client_mf.py  test_client_mfportfolio.py  test_client_mfportfolio_fetch.py  test_client_scan.py  test_client_screener.py  test_client_sebi.py  test_comparable_overlay.py  test_concall_extraction.py  test_data_api.py  (+81 more)
flow-tracker/tools/: screener_clone.py
stock-cli/: CLAUDE.md  pyproject.toml  stock
stock-cli/deepdives/: HAL.NS.md
stock-cli/stockcli/: __main__.py  client.py  display.py  main.py  models.py  utils.py
(+728 files in other folders)
