[project]
name = "flow-tracker"
version = "0.1.0"
description = "FII/DII institutional flow tracker for Indian markets"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9,<1",
    "rich>=13,<14",
    "pydantic>=2,<3",
    "httpx>=0.27,<1",
    "xlrd>=2,<3",
    "openpyxl>=3,<4",
    "beautifulsoup4>=4.12",
    "yfinance>=0.2.40",
    "jinja2>=3.1",
    "claude-agent-sdk>=0.1.50",
    "markdown>=3.10.2",
    "pyyaml>=6,<7",
    "matplotlib>=3.9",
    "pdfplumber>=0.11",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "respx>=0.22",
    "freezegun>=1.4",
    "pytest-cov>=5",
    "syrupy>=4",
]
autoeval = [
    "google-genai>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 10
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests requiring store + display",
    "e2e: end-to-end pipeline tests",
    "contract: contract/regression tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:yfinance.*",
    "ignore::DeprecationWarning:openpyxl.*",
]

[project.scripts]
flowtrack = "flowtracker.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flowtracker"]
