[project]
name = "flow-tracker"
version = "0.1.0"
description = "FII/DII institutional flow tracker for Indian markets"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9,<1",
    "rich>=13,<14",
    "pydantic>=2,<3",
    "httpx>=0.27,<1",
    "xlrd>=2,<3",
    "openpyxl>=3,<4",
    "beautifulsoup4>=4.12",
    "yfinance>=0.2.40",
    "jinja2>=3.1",
    "claude-agent-sdk>=0.1.56",
    "markdown>=3.10.2",
    "pyyaml>=6,<7",
    "matplotlib>=3.9",
    "pdfplumber>=0.11",
    "docling>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.3",
    "respx>=0.22",
    "freezegun>=1.4",
    "pytest-cov>=5",
    "syrupy>=4",
    "pytest-repeat>=0.9",
    "pytest-rerunfailures>=14",
]
autoeval = [
    "google-genai>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 10
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests requiring store + display",
    "e2e: end-to-end pipeline tests",
    "contract: contract/regression tests",
    "concurrency: SQLite concurrency tests (may be flaky under load)",
]
filterwarnings = [
    "ignore::DeprecationWarning:yfinance.*",
    "ignore::DeprecationWarning:openpyxl.*",
]

[tool.coverage.run]
branch = true
source = ["flowtracker"]
# New extractor modules wrap async Claude Agent SDK calls — unit-testing them
# requires mocking the entire SDK, which is not worth the infra investment for
# primarily-LLM-dispatch code. The data_api layer on top (get_deck_insights,
# get_annual_report) is fully covered; integration correctness is validated
# via end-to-end smoke tests on real PDFs.
omit = [
    "flowtracker/research/deck_extractor.py",
    "flowtracker/research/annual_report_extractor.py",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
fail_under = 74

[project.scripts]
flowtrack = "flowtracker.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flowtracker"]
