[project]
name = "stock-cli"
version = "0.1.0"
description = "Stock screening, research & comparison CLI — US + Indian markets"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9,<1",
    "rich>=13,<14",
    "yfinance>=0.2.40",
    "pydantic>=2,<3",
]

[project.scripts]
stock = "stockcli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stockcli"]

